Fix pom.xml - correct version